
Package: R.matlab
=================

Version: 1.4.0 [2011-07-24]
o Added a namespace to the package, which will be more or less
  a requirement in the next major release of R.


Version: 1.3.7 [2011-02-01]
o ROBUSTNESS: Now using argument 'imaginary' (not 'imag') in calls
  to complex().


Version: 1.3.6 [2010-10-29]
o ROBUSTNESS: Now writeMat() gives an error if duplicated object
  names are used, e.g. writeMat(..., A=1, B=2, A=3).
o ROBUSTNESS: Now writeMat() gives an error, not a warning, if 
  there are non-named objects.
o BUG FIX: The test for non-named objects to writeMat() did not
  work correctly.  Thanks Claudia Beleites for the report.


Version: 1.3.5 [2010-10-28]
o DOCUMENTATION: Clarified in the help of writeMat() that it can
  only write 'uncompressed' MAT files.
o ROBUSTNESS: Although readMat() can read non-named objects, in
  Matlab it is only the 'load()' function call that can read it
  but not the plain 'load' call.  Because of this, writeMat() 
  will now give a warning if it detects non-named objects.  For
  instance, in writeMat("foo.mat", x=a, y) the object 'a' is 
  named (as "x") whereas 'y' is not.  To name the objects and 
  avoid the warning, use writeMat("foo.mat", x=a, y=y).  Thanks
  Claudia Beleites at University of Trieste for reporting on this.


Version: 1.3.4 [2010-10-26]
o DOCUMENTATION: Clarified and corrected some sentences in help(Matlab).
o DOCUMENTATION: Added Matlab 7.11.0.584 (R2010b) to the list of
  confirmed version that are compatible with R.matlab.
o BUG FIX: The MatlabServer.m script incorrectly referred to the 
  InputStreamByteWrapper class as java.io.InputStreamByteWrapper. This
  hopefully solves previously reports on obtaining "??? Undefined variable
  "java" or class "java.io.InputStreamByteWrapper". Error in ==> 
  MatlabServer at 262 reader = java.io.InputStreamByteWrapper(4096);".
  This bug was introduced in R.matlab v1.2.5 (2009-08-25).
  Thanks Kenvor Cothey at GMO LCC for reporting on this.

